--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,62 @@
-*{
-    margin: 0;
-    padding: 0;
+*, ::before, ::after {
+    box-sizing: border-box;
 }
 
 body {
     font-family: sans-serif;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
+
+html {
+  min-height: 100%;
+  width: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  /* min-height: 100%; */
+  overflow: hidden auto;
+}
+
+
 header {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;    
     background-color: #612a92;
     color: white;
-    justify-content:left;
-    width: 100%;
-}
-
-header div {
-    margin: 0.6%;
+    /* height: 100%;
+    width: 100%; */
+    padding: 7px;
 }
 
 .iconeMenu {
-    margin-top: 20px;
-    margin-left: 100px;
+    padding-top: 15px;
+    padding-left: 90px;
 }
 
 .iconeMenu span {
-    margin-left: 10px;
+    padding: 0px 0px 0px 10px;
 }
 
 .logo {
-    margin-top: 20px;
-    margin-left: 40px;
-}
-
-.botaoEntrar{
-    margin-top: 10px;
-    margin-left: 50px;
-    max-width: 42px;
+    padding-top: 8px;
 }
 
 #barraPesquisa {
     position: relative;
     width: 55%;
-    margin-left: 30px;
 }
 
 #imagem-lupa{
     position: absolute;
-    right: 0px;
-    top: 23.5%;
+    right: 20px;
+    top: 15px;
     opacity: 0.3;
 }
 
@@ -65,14 +72,35 @@ header div {
     border: solid 0,5px;
     border-radius: 50px;
     border-color: white;
-    height: 50px;
+    height: 48px;
   }
 
+.botaoEntrar{
+    padding-right: 100px;
+}
+
+.botaoEntrar button {
+    border-radius: 6px; 
+    padding: 15px 32px; 
+    cursor: pointer; 
+    color: #3790f8; 
+    border: 0,5px; 
+    border-color: #3790f8; 
+    font-size: 100%; 
+    text-align: center;
+}
+
+.container {
+    padding-right: 5%;
+    padding-left: 7%;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    padding-top: 25px;
+    padding-bottom: 35px;
+}
+
 .alertaPreco {
-    margin-top: 25px;
-    margin-left: 90px;
-    margin-right: 90px;
-    margin-bottom: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -90,12 +118,16 @@ header div {
 }
 
 .imagem-anuncio {
-    margin-left: 90px;
-    margin-right: 90px;
     align-items: center;
     background-color: #582c92;
     border-radius: 20px;
-    min-width: 400px;
+    width: 100%;
+    margin-top: 25px;
+    /* min-width: 400px; */
+}
+
+.imagem-anuncio #anuncioDesktop {
+    width: 100%
 }
 
 .imagem-anuncio #anuncioMobile {
@@ -104,38 +136,89 @@ header div {
 
 .icones {
     display: flex;
-    margin-left: 30px;
+    /* margin-left: 30px; */
+    justify-content: center;
+    justify-content: space-between;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 .icones div {
-    margin-top: 25px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     display: flex;
     flex-direction: row;
-    padding-left: 60px;
     align-items: center;
     border-radius: 50px;
-    border-color: #d1d1d1;
+    border-color: #eee;
     border-style: solid;
     border-width: thin;
-    padding: 5px;
-    margin-left: 50px;
+    font-size: 14px;
 }
 
-@media only screen and (max-width: 900px) {
+.icones p {
+    padding-left: 10px;
+}
+
+.icones img {
+    padding-left: 10px;
+}
+
+@media only screen and (max-width: 768px) {
     header {
-        height: 129.2px;
-        position: relative;
+        padding-bottom: 82px;
+    }
+
+    .container {
+        padding: 15px;
+    }
+
+    .iconeMenu span {
+        display: none;
+    }
+
+    .iconeMenu {
+        padding-top: 15px;
+        padding-left: 20px;
+    }
+
+    .logo {
+        position: absolute;
+        padding-left: 60px;
     }
 
     #barraPesquisa {
-        position: absolute;
-        width: 90%;
-        right: 18px;
-        bottom: 0px;
+        position:absolute;
+        top: 60px;
+        width: 98%;
     }
-    
-    .iconeMenu span {
-        display: none;
+
+    #barraPesquisa #txtBusca {
+        display: flex;
+    }
+
+    .botaoEntrar {
+        display: flex;
+        padding-right: 0px;
+        padding-top: 10px;
+    }
+
+    .botaoEntrar button {
+        display: flex;
+        justify-content: center;
+        padding: 5px;
+        padding-left: 25px;
+        padding-right: 25px;
+        font-size: 12px;
+        border-width: 1px;
+    }
+
+    .alertaPreco a {
+        white-space: nowrap; 
+        width: 238px; 
+        overflow: hidden;
+        text-overflow: clip;
     }
 
     .imagem-anuncio #anuncioDesktop {
@@ -144,61 +227,96 @@ header div {
 
     .imagem-anuncio #anuncioMobile {
         display: block;
-        width: 100%;
+        padding-left: 49px;
     }
-}
 
-@media only screen and (max-width: 768px) {
-       
-        body {
-            overflow-x: hidden;
-        }
-
-        .iconeMenu {
-            margin: 5%;
-            position: absolute;
-        }
-
-        .logo a {
-                 margin: 70%;
-        }
-
-        .botaoEntrar {
-            margin-left: 40%;
-        }
-        
-        .imagem-anuncio #anuncioMobile {
-           width: auto;
-           margin: 0px 40px;
-           
-       }
-       .imagem-anuncio {
-           margin-left: 40px;
-           width: 100%;
-       }
-
-       #barraPesquisa {
-            margin-bottom: 10px;
-       }
-
-       .alertaPreco {
-        margin: 40px;
-        width: 85%;
-        align-self: center;
-        padding: 15px;
-       }
-
-       .alertaPreco a {
-        max-width: 31.5ch;
-        overflow: hidden;
-        text-overflow: ellipsis clip;
-        white-space: nowrap;
-       }
-
-       .icones {
-        width: auto;
+    .icones {
         overflow-x: scroll;
         overflow-y: hidden;
         white-space: nowrap;
-       }
+        padding: 15px;
+    }
+
+    .icones div {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 15px;
+    }
 }
+
+
+/* @media only screen and (min-width: 411px) {
+    .logo {
+        padding-top: 0.3%;
+        padding-left: 1.8%;
+    }
+
+    .logo a img {
+        width: 100px;
+    }
+
+    .container {
+        padding-left: 7%;
+        padding-right: 7%;
+        padding-top: 2%;
+        padding-bottom: 2.5%;
+    }
+
+    #barraPesquisa {
+        width: 55%;
+    }
+
+    #barraPesquisa #txtBusca {
+        padding-left: 4%;
+        font-size: 99%;
+        height: 100%;
+    }
+
+    .botaoEntrar {
+        padding-top: 0.3%;
+        padding-left: 2%;
+    }
+
+    .botaoEntrar button {
+        padding: 12px 30px;
+    }
+
+    .alertaPreco {
+        padding: 1.2%;
+        align-items: center;
+        width: 100%;
+    }
+
+    .alertaPreco a {
+        padding: 0.2%;
+    }
+
+    .imagem-anuncio {
+        margin-top: 2%;
+    } 
+
+    .imagem-anuncio #anuncioDesktop {
+        width: 100%;
+    }
+
+    .imagem-anuncio #anuncioMobile {
+        display: none;
+    }
+
+    .icones {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .icones div {
+        font-size: 90%;
+        padding: 0px 20px 0px 5px;
+        margin-right: 0%;
+    }
+
+    .icones div img {
+        align-items: left;
+        width: 50%;
+    }
+} */
+
