finalização projeto clone do site Zoom

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,8 @@ header {
 
     .imagem-anuncio #anuncioMobile {
         display: block;
-        padding-left: 49px;
+        padding-left: 0px;
+        width: 100%;
     }
 
     .icones {
