--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,68 @@ header {
     padding-left: 10px;
 }
 
+.modal-container {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000000;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: 200px;
+    background-color: #fff;
+    position: relative;
+}
+
+.login-email, .login-password {
+    width: 200px;
+    height: 40px;
+}
+
+.closeButton {
+    position: absolute;
+    width: 30px;
+    top: 0;
+    right: 0;
+}
+
+.messageError{
+    color: red;
+    margin: 10px 0 10px ;
+    align-self: center;
+}
+
+.enterButton {
+    width: fit-content;
+    align-self: center;
+}
+
+.searchContainer {
+    display: none;
+    width: vw;
+    height: 100vh;
+    background-color: #fff;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
+
+.barraPesquisa {
+    text-align: center;
+}
+
+.resultadoPesquisa {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 100vh;
+}
+
 @media only screen and (max-width: 768px) {
     header {
         padding-bottom: 82px;
