--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,11 @@
-*, ::before, ::after {
-    box-sizing: border-box;
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
 
 body {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 body,
@@ -22,282 +24,308 @@ body {
   overflow: hidden auto;
 }
 
-
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;    
-    background-color: #612a92;
-    color: white;
-    padding: 7px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #612a92;
+  color: white;
+  padding: 7px;
 }
 
 .iconeMenu {
-    padding-top: 15px;
-    padding-left: 90px;
+  padding-top: 15px;
+  padding-left: 90px;
 }
 
 .iconeMenu span {
-    padding: 0px 0px 0px 10px;
+  padding: 0px 0px 0px 10px;
 }
 
 .logo {
-    padding-top: 8px;
+  padding-top: 8px;
 }
 
 #barraPesquisa {
-    position: relative;
-    width: 55%;
+  position: relative;
+  width: 55%;
 }
 
-#imagem-lupa{
-    position: absolute;
-    right: 20px;
-    top: 15px;
-    opacity: 0.3;
+#imagem-lupa {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  opacity: 0.3;
 }
 
-#txtBusca{
-    margin: 0px;
-    outline: none;
-    float: left;
-    background-color: white;
-    padding-left: 20px;
-    font-size:18px;
-    border: none;
-    width: 100%;
-    border: solid 0,5px;
-    border-radius: 50px;
-    border-color: white;
-    height: 48px;
-  }
+#txtBusca {
+  margin: 0px;
+  outline: none;
+  float: left;
+  background-color: white;
+  padding-left: 20px;
+  font-size: 18px;
+  border: none;
+  width: 100%;
+  border: solid 0, 5px;
+  border-radius: 50px;
+  border-color: white;
+  height: 48px;
+}
 
-.botaoEntrar{
-    padding-right: 100px;
+.botaoEntrar {
+  padding-right: 100px;
 }
 
 .botaoEntrar button {
-    border-radius: 6px; 
-    padding: 15px 32px; 
-    cursor: pointer; 
-    color: #3790f8; 
-    border: 0,5px; 
-    border-color: #3790f8; 
-    font-size: 100%; 
-    text-align: center;
+  border-radius: 6px;
+  padding: 15px 32px;
+  cursor: pointer;
+  color: #3790f8;
+  border: 0, 5px;
+  border-color: #3790f8;
+  font-size: 100%;
+  text-align: center;
 }
 
 .container {
-    padding-right: 5%;
-    padding-left: 7%;
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    padding-top: 25px;
-    padding-bottom: 35px;
+  padding-right: 5%;
+  padding-left: 7%;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  padding-top: 25px;
+  padding-bottom: 35px;
 }
 
 .alertaPreco {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 10px;
-    border-color: #d1d1d1;
-    border-style: solid;
-    border-width: thin;
-    padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  border-color: #d1d1d1;
+  border-style: solid;
+  border-width: thin;
+  padding: 15px;
 }
 
 .alertaPreco a {
-    text-decoration: none;
-    font-weight: bolder;
-    font-size: 13.5px;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 13.5px;
 }
 
 .imagem-anuncio {
-    align-items: center;
-    background-color: #582c92;
-    border-radius: 20px;
-    width: 100%;
-    margin-top: 25px;
+  align-items: center;
+  background-color: #582c92;
+  border-radius: 20px;
+  width: 100%;
+  margin-top: 25px;
 }
 
 .imagem-anuncio #anuncioDesktop {
-    width: 100%
+  width: 100%;
 }
 
 .imagem-anuncio #anuncioMobile {
-    display: none;
+  display: none;
 }
 
 .icones {
-    display: flex;
-    justify-content: center;
-    justify-content: space-between;
-    padding-right: 50px;
-    padding-left: 50px;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 .icones div {
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 50px;
-    border-color: #eee;
-    border-style: solid;
-    border-width: thin;
-    font-size: 14px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 50px;
+  border-color: #eee;
+  border-style: solid;
+  border-width: thin;
+  font-size: 14px;
 }
 
 .icones p {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .icones img {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .modal-container {
-    display: none;
-    width: 100vw;
-    height: 100vh;
-    background-color: #000000;
-    justify-content: center;
-    align-items: center;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  /* background-color: #000000; */
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    height: 200px;
-    background-color: #fff;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  height: 200px;
+  background-color: #fff;
+  position: relative;
 }
 
-.login-email, .login-password {
-    width: 200px;
-    height: 40px;
+.login-email,
+.login-password {
+  width: 200px;
+  height: 40px;
 }
 
 .closeButton {
-    position: absolute;
-    width: 30px;
-    top: 0;
-    right: 0;
+  position: absolute;
+  width: 30px;
+  top: 0;
+  right: 0;
 }
 
-.messageError{
-    color: red;
-    margin: 10px 0 10px ;
-    align-self: center;
+.messageError {
+  color: red;
+  margin: 10px 0 10px;
+  align-self: center;
 }
 
 .enterButton {
-    width: fit-content;
-    align-self: center;
+  width: fit-content;
+  align-self: center;
 }
 
 .searchContainer {
-    display: none;
-    width: vw;
-    height: 100vh;
-    background-color: #fff;
-    /* justify-content: center; */
-    align-items: center;
-    flex-direction: column;
+  display: none;
+  /* display: flex; */
+  flex-direction: column;
+  padding: 40px;
 }
 
 .barraPesquisa {
-    text-align: center;
+  text-align: center;
 }
 
 .resultadoPesquisa {
-    display: flex;
-    flex-direction: column;
-    width: 50vw;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  height: 100vh;
+}
+
+.accessContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 200px;
+  padding: 50px;
+  align-items: center;
+}
+
+.accessButon {
+  margin-bottom: 25px;
+  height: 50px;
+  width: 400px;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.loginContainer {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media only screen and (max-width: 768px) {
-    header {
-        padding-bottom: 82px;
-    }
+  header {
+    padding-bottom: 82px;
+  }
 
-    .container {
-        padding: 15px;
-    }
+  .container {
+    padding: 15px;
+  }
 
-    .iconeMenu span {
-        display: none;
-    }
+  .iconeMenu span {
+    display: none;
+  }
 
-    .iconeMenu {
-        padding-top: 15px;
-        padding-left: 20px;
-    }
+  .iconeMenu {
+    padding-top: 15px;
+    padding-left: 20px;
+  }
 
-    .logo {
-        position: absolute;
-        padding-left: 60px;
-    }
+  .logo {
+    position: absolute;
+    padding-left: 60px;
+  }
 
-    #barraPesquisa {
-        position:absolute;
-        top: 60px;
-        width: 98%;
-    }
+  #barraPesquisa {
+    position: absolute;
+    top: 60px;
+    width: 98%;
+  }
 
-    #barraPesquisa #txtBusca {
-        display: flex;
-    }
+  #barraPesquisa #txtBusca {
+    display: flex;
+  }
 
-    .botaoEntrar {
-        display: flex;
-        padding-right: 0px;
-        padding-top: 10px;
-    }
+  .botaoEntrar {
+    display: flex;
+    padding-right: 0px;
+    padding-top: 10px;
+  }
 
-    .botaoEntrar button {
-        display: flex;
-        justify-content: center;
-        padding: 5px;
-        padding-left: 25px;
-        padding-right: 25px;
-        font-size: 12px;
-        border-width: 1px;
-    }
+  .botaoEntrar button {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 12px;
+    border-width: 1px;
+  }
 
-    .alertaPreco a {
-        white-space: nowrap; 
-        width: 238px; 
-        overflow: hidden;
-        text-overflow: clip;
-    }
+  .alertaPreco a {
+    white-space: nowrap;
+    width: 238px;
+    overflow: hidden;
+    text-overflow: clip;
+  }
 
-    .imagem-anuncio #anuncioDesktop {
-        display: none;
-    }
+  .imagem-anuncio #anuncioDesktop {
+    display: none;
+  }
 
-    .imagem-anuncio #anuncioMobile {
-        display: block;
-        padding-left: 0px;
-        width: 100%;
-    }
+  .imagem-anuncio #anuncioMobile {
+    display: block;
+    padding-left: 0px;
+    width: 100%;
+  }
 
-    .icones {
-        overflow-x: scroll;
-        overflow-y: hidden;
-        white-space: nowrap;
-        padding: 15px;
-    }
+  .icones {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    padding: 15px;
+  }
 
-    .icones div {
-        display: flex;
-        justify-content: space-around;
-        margin-right: 15px;
-    }
+  .icones div {
+    display: flex;
+    justify-content: space-around;
+    margin-right: 15px;
+  }
 }
