--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,9 @@
 <script src="/javascripts/validate-token.js"></script>
 <script src="/javascripts/control-session.js"></script>
 <div class="accessContainer">
-  <button class="accessButon">Cadastro de usuário</button>
+  <button onclick="window.location = '/usuario/novo' " class="accessButon">
+    Cadastro de usuário
+  </button>
   <button class="accessButon">Publicar conteúdo</button>
   <button class="accessButon">Buscar conteúdo</button>
 </div>
