--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,8 @@
     Cadastro de usuário
   </button>
   <button class="accessButon">Publicar conteúdo</button>
-  <button class="accessButon">Buscar conteúdo</button>
+  <button onclick="window.location = '/conteudos'" class="accessButon">
+    Buscar conteúdo
+  </button>
 </div>
 <%- include('footer'); -%>
