--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,9 @@
   <button onclick="window.location = '/usuario/novo' " class="accessButon">
     Cadastro de usuário
   </button>
-  <button class="accessButon">Publicar conteúdo</button>
+  <button onclick="window.location = '/conteudo/novo'" class="accessButon">
+    Publicar conteúdo
+  </button>
   <button onclick="window.location = '/conteudos'" class="accessButon">
     Buscar conteúdo
   </button>
